# haskell-teaching

./: README.md  haskell-teaching.cabal
app/: DoNotation.hs  Main.hs
