cabal-version:      2.4
name:               haskell-teaching
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable haskell-teaching
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: GHC2021
  other-modules:      DoNotation
  build-depends:
    , base  ^>=4.16.4.0
    , mtl
